--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "reveal-md markdown -w",
-    "build": "reveal-md markdown --static docs"
+    "start": "reveal-md markdown -w --css node_modules/reveal.js-plugins/customcontrols/style.css,node_modules/reveal.js-plugins/chalkboard/style.css",
+    "build": "reveal-md markdown --static docs --css node_modules/reveal.js-plugins/customcontrols/style.css,node_modules/reveal.js-plugins/chalkboard/style.css "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "reveal-md": "5.4.0"
+    "reveal-md": "5.4.0",
+    "reveal.js-plugins": "4.1.5"
   }
 }
