--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "reveal-md markdown -w --css plugins/customcontrols/style.css,plugins/chalkboard/style.css,plugins/menu/menu.css",
-    "build": "reveal-md markdown --static docs --css plugins/customcontrols/style.css,plugins/chalkboard/style.css,,plugins/menu/menu.css"
+    "build": "reveal-md markdown --static docs --css plugins/customcontrols/style.css,plugins/chalkboard/style.css,,plugins/menu/menu.css --assets-dir assets"
   },
   "keywords": [],
   "author": "",
